2007-05-25  John Sullivan  <sullivan@apple.com>

        Reviewed by Anders and Tim

        - WebCore change for: 
          <rdar://problem/5226000> REGRESSION: In Gmail and Mail, a hang occurs when attempting to grammar/spellcheck a word in a reply 

        * editing/Editor.cpp:
        (WebCore::findFirstBadGrammarInRange):
        Use the more obvious way to check whether a range is empty. In this case the more obvious way
        would also have caused no problem to occur. Also added an assertion. Though this change is
        enough to fix the symptom of the bug, the real fix is in WebKit.

2007-05-25  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin (Sorta).

        * loader/ImageDocument.cpp:
        (WebCore::ImageDocument::restoreImageSize):
        Use removeProperty here.

2007-05-25  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin Adler.

        Some cleanup to Cache while Fixing <rdar://problem/5055182> The page cache 
        has no global cap.
        
        * loader/Cache.cpp: Removed destructor to help identify this class as a
        singleton.

        * loader/Cache.h: Made constructor and destructor private to match the
        singleton model of PageCache.
        
        Put structs related to Cache inside its declaration to fix some namespace
        conflicts I had while writing my patch. (They don't exist anymore, but
        I figured this might help future development.)

2007-05-24  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin Adler.

        Fixed a bug with Settings where a number of different objects held bare 
        Settings* data members, even though the Page owns the Settings object and 
        deletes it upon destruction.

        Added NULL checks since the Page can be deleted before the frame/document.

        * page/Settings.cpp: Removed reliance on setNeedsReapplyStylesForSettingsChange.

        * css/cssstyleselector.cpp: CSSStyleSelector was the worst offender. It 